grafico pastel de porcentage de gastos de funcionamiento. cerrando https://redmine.guegue.com/issues/1300

--- a/core/templates/lista.html
+++ b/core/templates/lista.html
@@ -4,10 +4,11 @@
 <br/>
 <br/>
 <ul>
+<li><a href="{%url 'gasto_minimo_sector'%}">Gasto mínimo por sector</a></li>
 <li><a href="{%url 'origen_ingresos'%}">OIM</a></li>
 <li><a href="{%url 'origen_gastos'%}">OGM</a></li>
 <li><a href="{%url 'inversion_categoria'%}">Inversión por categoría</a></li>
-<li><a href="{%url 'gastos_funcion'%}">Gastos Función</a></li>
+<li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
 <li><a href="{%url 'gastos_personal'%}">Gastos Personal</a></li>
 <li><a href="{%url 'autonomia_gastos'%}">AGO</a></li>
 <li><a href="{%url 'ahorro_corriente'%}">ACI</a></li>
