--- a/core/templates/chart.html
+++ b/core/templates/chart.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% load static thumbnail chartit %}
 {% block main_content %}
+    {{ charts|load_charts:"chart" }}
+    <div id='chart'> Chart will be rendered here </div>
     <form method="GET">
+    <select name="year">
+    {% for year in year_list %}
+        <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
+    {% endfor %}
+    </select>
     <select name="municipio">
     <option value="">--</option>
     {% for municipio in municipio_list %}
@@ -10,9 +17,4 @@
     </select>
     <input type="submit" value="Submit"/>
     </form>
-
-    {{ charts|load_charts:"gfbar,barra,pie" }}
-    <div id='gfbar'></div>
-    <div id='barra'></div>
-    <div id='pie'></div>
 {% endblock %}
