pie de porcentage de gastos personales. cierra https://redmine.guegue.com/issues/1299

--- a/core/templates/gfchart.html
+++ b/core/templates/gfchart.html
@@ -2,6 +2,11 @@
 {% load static thumbnail chartit %}
 {% block main_content %}
     <form method="GET">
+    <select name="year">
+    {% for year in year_list %}
+        <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
+    {% endfor %}
+    </select>
     <select name="municipio">
     <option value="">--</option>
     {% for municipio in municipio_list %}
