--- a/core/templates/gpersonal.html
+++ b/core/templates/gpersonal.html
@@ -2,6 +2,11 @@
 {% load static thumbnail chartit %}
 {% block main_content %}
     <form method="GET">
+    <select name="year">
+    {% for year in year_list %}
+        <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
+    {% endfor %}
+    </select>
     <select name="municipio">
     <option value="">--</option>
     {% for municipio in municipio_list %}
@@ -10,7 +15,8 @@
     </select>
     <input type="submit" value="Submit"/>
     </form>
-    {{ charts|load_charts:"chart,chart_ejecutado" }}
-    <div id='chart'> Chart will be rendered here </div>
-    <div id='chart_ejecutado'> Chart will be rendered here </div>
+    {{ charts|load_charts:"chart,chart_ejecutado,pie" }}
+    <div id='chart'></div>
+    <div id='chart_ejecutado'></div>
+    <div id='pie'></div>
 {% endblock %}
