--- a/core/templates/gpersonal.html
+++ b/core/templates/gpersonal.html
@@ -1,20 +1,23 @@
 {% extends "base.html" %}
 {% load static thumbnail chartit %}
 {% block main_content %}
-    <form method="GET">
-    <select name="year">
-    {% for year in year_list %}
-        <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
-    {% endfor %}
-    </select>
-    <select name="municipio">
-    <option value="">--</option>
-    {% for municipio in municipio_list %}
-        <option value="{{municipio.slug}}">{{municipio}}</option>
-    {% endfor %}
-    </select>
-    <input type="submit" value="Submit"/>
-    </form>
+    <div id="span12 search">
+        <form method="GET">
+        <select name="year">
+        {% for year in year_list %}
+            <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
+        {% endfor %}
+        </select>
+        <select name="municipio">
+        <option value="">--</option>
+        {% for municipio in municipio_list %}
+            <option value="{{municipio.slug}}">{{municipio}}</option>
+        {% endfor %}
+        </select>
+        <input type="submit" value="Submit"/>
+        </form>
+    </div>
+    <div class="clearfix"></div>
     {{ charts|load_charts:"chart,chart_ejecutado,pie" }}
     <div id='chart'></div>
     <div id='chart_ejecutado'></div>
