inserta promedio de gastos en chart GF

--- a/core/templates/gfchart.html
+++ b/core/templates/gfchart.html
@@ -23,3 +23,9 @@
     <div id='barra'></div>
     <div id='pie'></div>
 {% endblock %}
+<script>
+$('#gfTab a').click(function (e) {
+  e.preventDefault()
+    $(this).tab('show')
+    })
+</script>
