--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% load static thumbnail chartit %}
 {% block titulo %}
-
 {% endblock %}
 
 {% block main_content %}
-    <h1>Origen de los ingresos </h1>
+    <h2>Origen de los ingresos </h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -24,25 +23,23 @@
     {{ charts|load_charts:"asignado,ejecutado,asignado_barra,barra2" }}
     <ul id="oimTab" class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#asignados" aria-controls="asignados" role="tab" data-toggle="tab">Asignado y ejecutado anual</a></li>
-        <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones del presupuesto</a></li>
+        <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
     </ul>
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
-        <div class="col-md-12">
           <div class="col-md-6">
             <div id='ejecutado'> Chart will be rendered here </div>
           </div>
           <div class="col-md-6">
             <div id='asignado'> Chart will be rendered here </div>
           </div>
-        </div>
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimmodificacion" aria-labelledby="oimmodificacion-tab">
-          <div id='barra2'> Chart will be rendered here </div>
+          <div id='barra2' class="col-md-11"> Chart will be rendered here </div>
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
-          <div id='asignado_barra'> Chart will be rendered here </div>
+          <div id='asignado_barra' class="col-md-11"> Chart will be rendered here </div>
       </div>
     </div>
 
