Cambiando estilo de titular de grafico ogm - agregando tabs en ogm

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block titulo %}
+{{ obj.nombre }}
+{% endblock %}
 {% load static thumbnail chartit %}
 {% block main_content %}
     <form method="GET">
