--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <h2>Origen de los ingresos </h2>
+    <h2 class="title">Origen de los ingresos </h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
