--- a/core/templates/gfchart.html
+++ b/core/templates/gfchart.html
@@ -17,11 +17,24 @@
     <input type="submit" value="Submit"/>
     </form>
     </div>
+    <ul id="oimTab" class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#asignados" aria-controls="asignados" role="tab" data-toggle="tab">Asignado y ejecutado anual</a></li>
+        <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
+        <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
+    </ul>
     <div class="clearfix"></div>
     {{ charts|load_charts:"gfbar,barra,pie" }}
-    <div id='gfbar'></div>
-    <div id='barra'></div>
-    <div id='pie'></div>
+    <div id="oimTabContent" class="tab-content col-md-12">
+      <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
+        <div id='pie'></div>
+      </div>
+      <div role="tabpanel" class="tab-pane fade" id="oimmodificacion" aria-labelledby="oimmodificacion-tab">
+        <div id='barra' class="col-md-10"></div>
+      </div>
+      <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
+        <div id='gfbar'></div>
+      </div>
+    </div>
 {% endblock %}
 <script>
 $('#gfTab a').click(function (e) {
