agregando titulo a gf

--- a/core/templates/gfchart.html
+++ b/core/templates/gfchart.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static thumbnail chartit %}
 {% block main_content %}
+    <h2 class="title">Gastos de funcionamiento </h2>
     <div id="span12 search">
     <form method="GET">
     <select name="year">
