--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% load static thumbnail chartit %}
 {% block main_content %}
+    <h2 class="title">Destino de los gastos </h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -18,20 +19,28 @@
     </select>
     <input type="submit" value="Submit"/>
     </form>
+    <ul id="oimTab" class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#asignados" aria-controls="asignados" role="tab" data-toggle="tab">Asignado y ejecutado anual</a></li>
+        <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
+        <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Asignacion de gasatos por tipo</a></li>
+    </ul>
 
     {{ charts|load_charts:"ejecutado,asignado,asignado_barra,barra" }}
-    <div class="col-md-12">
-      <div class="col-md-6">
-        <div id='ejecutado'> Chart will be rendered here </div>
+    <div id="oimTabContent" class="tab-content">
+      <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
+        <div class="col-md-6">
+            <div id='asignado'> Chart will be rendered here </div>
+        </div>
+        <div class="col-md-6">
+            <div id='ejecutado'> Chart will be rendered here </div>
+        </div>
       </div>
-      <div class="col-md-6">
-        <div id='asignado'> Chart will be rendered here </div>
+      <div role="tabpanel" class="tab-pane fade" id="oimmodificacion" aria-labelledby="oimmodificacion-tab">
+        <div id='barra' class="col-md-10"> Chart will be rendered here </div>
       </div>
-      <div class="col-md-6">
-        <div id='asignado_barra'> Chart will be rendered here </div>
-      </div>
-      <div class="col-md-6">
-        <div id='barra'> Chart will be rendered here </div>
+      <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
+        <div id='asignado_barra' class="col-md-10"> Chart will be rendered here </div>
       </div>
     </div>
+</div>
 {% endblock %}
