--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -65,17 +65,17 @@
 {% block main_content %}
         {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area, fuentes" }}
         <div class="col-md-4 col-sm-4">
-          <h2>Cuanto ingresa?</h2>
+            <h2>Cuánto ingresa?</h2>
           <div id='oim_ejecutado'>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <h2>En que se gasta?</h2>
+          <h2>En qué se gasta?</h2>
           <div id='ogm_ejecutado'>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <h2>Fuentes de Financiamiento</h2>
+          <h2>Quién Financia?</h2>
           <div id='fuentes'>
           </div>
         </div>
