agregando enlace plan de inversion - TEMPORAL

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -69,7 +69,7 @@
                     <li><a href="{%url 'inversion_categoria'%}">Inversión por categoría</a></li>
                   </ul>
                 </li>
-                <li><a href="#contact">PROYECTOS</a></li>
+                <li><a href="/core/plan-de-inversion/?inversion__municipio__slug=managua&inversion__fecha_0=2014-01-01&inversion__fecha_1=2014-12-31">PAN DE INVERSION</a></li>
                 <li><a href="#contact">CONTACTENOS</a></li>
               </ul>
             </div>
