--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static thumbnail chartit %}
+{% load humanize %} 
+{% load core_extras %} 
 {% block titulo %}
 {% endblock %}
 
@@ -28,6 +30,43 @@
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
           <div class="col-md-6">
+            {% for total in totales %}
+                <img src="/static/img/{{ total.subsubtipoingreso__origen__nombre }}.png" height="70" alt="{{ total.subsubtipoingreso__origen__nombre }}" />
+                {{ total.subsubtipoingreso__origen__nombre }} <span class="btn btn-danger">{{ total.percent }}</span>
+                {% with ''|center:total.percent as range %}
+                {% for i in range %}
+                {% endfor %}
+                {% endwith %}
+                <br/>
+            {% endfor %}
+          </div>
+        <div class="col-md-6">
+          <table>
+            <tr>
+              <th></th>
+              {% for year in year_list %}
+                <th>{{ year|date:"Y" }}</th>
+              {% endfor %}
+              <th>Promedio {{ clasificacion }} en {{ ano }}</th>
+            </tr>
+            {% for key, data in porano.items %}
+             <tr>
+               <td>{{ key }}</td>
+               {% for year in year_list %}
+                 <td>{{ data|keyvalue:year.year|intword }}</td>
+               {% endfor %}
+               <td>{{ data.extra|intword }}</td>
+               <!-- old-fashioned way:
+               {% for subkey, subdata in data.items %}
+               <td>{{ subkey }} = {{ subdata| intword}}</td>
+               {% endfor %}
+                -->
+             </tr>
+           {% endfor %}
+ 
+          </table>
+         </div>
+          <div class="col-md-6">
             <div id='ejecutado'> Chart will be rendered here </div>
           </div>
           <div class="col-md-6">
@@ -41,8 +80,11 @@
           <div id='asignado_barra' class="col-md-11"> Chart will be rendered here </div>
       </div>
     </div>
+</div>
+
 
 {% endblock %}
+
 
 <script>
 $('#oimTab a').click(function (e) {
