--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -61,7 +61,7 @@
              <tr>
                <td class="text-left">{{ key }}</td>
                {% for year in year_list %}
-                 <td class="text-center">{{ data|keyvalue:year.year|intword }}</td>
+                 <td class="text-center">{{ data|keyvalue:year|intword }}</td>
                {% endfor %}
                <td>{{ data.extra|intword }}</td>
                <!-- old-fashioned way:
