--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -17,7 +17,7 @@
         {% for banner in banners %}
           <!--Slider Item{{ banners.count }}-->
           <div class="item{% if forloop.first %} active{% endif%}">
-            {% thumbnail banner.imagen "1600x400" crop='center' as img %}
+            {% thumbnail banner.imagen "1600x400" as img %}
               <img src="{{ img.url }}" class="pull-right" alt="{{ banner }}" />
             {% endthumbnail %}
             <div class="container">
