--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,17 +45,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <h2><a href="/">Presupuesto Municipal {% block titulo %} {% endblock %}</a></h2>
+              <h2 class="titular-header"><a href="/">Presupuesto Municipal {% block titulo %} {% endblock %}</a></h2>
             </div>
             <div id="navbar" class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">INICIO</a></li>
+                <li class="active"><a href="{% url 'home' %}">INICIO</a></li>
                 <li><a href="#about">ACERCA DE</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTO <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</a></li>
-                    <li><a href="{%url 'origen_gastos'%}">Origen de gastos del municipio</a></li>
+                   <li><a href="{%url 'origen_gastos'%}">Origen de gastos del municipio</a></li>
                     <li class="divider"></li>
                     <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
                     <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
