--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -10,7 +10,7 @@
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
-        <option value="{{year|date:'Y'}}">{{year|date:"Y"}}</option>
+        <option value="{{year}}">{{year}}</option>
     {% endfor %}
     </select>
     <select name="municipio">
@@ -26,7 +26,7 @@
         <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
     </ul>
-    {{ charts|load_charts:"asignado,ejecutado,asignado_barra,barra2" }}
+    {{ charts|load_charts:"ejecutado,asignado,asignado_barra,barra2" }}
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
           <div class="col-md-5">
@@ -53,7 +53,7 @@
             <tr class="info">
               <th></th>
               {% for year in year_list %}
-                <th>{{ year|date:"Y" }}</th>
+                <th>{{ year }}</th>
               {% endfor %}
               <th>Promedio</th>
             </tr>
