--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -10,13 +10,13 @@
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
-        <option value="{{year}}">{{year}}</option>
+        <option {% if year == request.GET.year|add:"0" %}selected{% endif %} value="{{year}}">{{year}}</option>
     {% endfor %}
     </select>
     <select name="municipio">
     <option value="">--</option>
     {% for municipio in municipio_list %}
-        <option value="{{municipio.slug}}">{{municipio}}</option>
+        <option {% if municipio.slug == request.GET.municipio %}selected{% endif %} value="{{municipio.slug}}">{{municipio}}</option>
     {% endfor %}
     </select>
     <input type="submit" value="Submit"/>
