--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <h2 class="title">Origen de los ingresos </h2>
+    <h2 class="title">Origen de los ingresos {{ anio }}</h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -26,7 +26,11 @@
         <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
     </ul>
-    {{ charts|load_charts:"ejecutado,asignado,asignado_barra,barra2" }}
+    {% if municipio %}
+        {{ charts|load_charts:"ejecutado, comparativo2, comparativo3, asignado_barra, barra2" }}
+    {% else %}
+        {{ charts|load_charts:"ejecutado, asignado_barra, barra2" }}
+    {% endif %}
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
           <div class="col-md-5">
@@ -78,7 +82,10 @@
             <div id='ejecutado'> Chart will be rendered here </div>
           </div>
           <div class="col-md-6">
-            <div id='asignado'> Chart will be rendered here </div>
+            <div id='comparativo2'> Chart will be rendered here </div>
+          </div>
+          <div class="col-md-6">
+            <div id='comparativo3'> Chart will be rendered here </div>
           </div>
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimmodificacion" aria-labelledby="oimmodificacion-tab">
