--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -27,7 +27,7 @@
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
     </ul>
     {% if municipio %}
-        {{ charts|load_charts:"ejecutado, comparativo2, comparativo3, asignado_barra, barra2" }}
+        {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, asignado_barra, barra2" }}
     {% else %}
         {{ charts|load_charts:"ejecutado, asignado_barra, barra2" }}
     {% endif %}
@@ -80,6 +80,9 @@
          </div>
           <div class="col-md-6">
             <div id='ejecutado'> Chart will be rendered here </div>
+          </div>
+          <div class="col-md-6">
+            <div id='comparativo_anios'> Chart will be rendered here </div>
           </div>
           <div class="col-md-6">
             <div id='comparativo2'> Chart will be rendered here </div>
